  of targets (it can now) and nested "unknown" elements have always
  been considered to be tasks (changed as well).

* <fixcrlf> would fail for files that contained lines longer than 8kB.

* Some junit formatters incorrectly assumed that all testcases would
  inherit from junit.framework.TestCase.

* <fixcrlf> dropped the first characters from Mac files.

Other changes:
--------------
* New task <loadfile> to load a whole file into a property

* New task <echoproperties> to list your current properties to the screen
  or a file. 

* A new combined email task, which replaces the old <mail> and
  <mimemail> tasks, has been added.  The <mimemail> task, and 
  old SendEmail and MimeMail classes have been deprecated.

* TarFileset takes in three new attributes - fullpath, prefix
  and preserveLeadingSlashes.

* <move> attempts to rename the directory, if everything inside it is
  included, before performing file-by-file moves.  This attempt will
  be done only if filtering is off and if mappers are not used.  This
  is a performance improvement and there is no change otherwise in
  the funtionality of this task.

* Exec task has extra attribute "resultproperty" to get the return code
  into a property.
  
* Exec task prints a message when a timed out process is killed.  
  
* Added optional attributes - name, arch and version to <os>

* Unjar, Untar, Unwar and Unzip now support patternsets to 
  select files from an archive for extraction.  Filesets may be 
  used to select archived files for unarchival.

* Javac task allows debug levels to be specified.  Debug levels
  will have an effect only when the modern compiler or the 
  classic compiler (version 1.2 and higher) is used and debugging
  is enabled.

* Mail task allows specification of port number.

* Added support for specifying CVS_RSH in the <cvs/> task

* New tasks bzip2 and bunzip2 to pack and unpack files using the 
  BZip2 alogrithm, replaceregexp, checksum, translate, waitfor, input,
  manifest
